* Fix sending JSON data with default function, not error or success * Remove Gravity Forms overflow hidden * better Dialog Insight settings control

--- a/public/css/tmsm-aquatonic-course-booking-public.less
+++ b/public/css/tmsm-aquatonic-course-booking-public.less
@@ -82,7 +82,7 @@
 }
 
 .tmsm-aquatonic-course-form-add{
-    .gform_wrapper .form-fields{
+    .form-fields{
         overflow: visible;
     }
 }
